--- a/.travis.yml
+++ b/.travis.yml
@@ -9,40 +9,10 @@ cache:
 
 # Enabling container based infrastructure hoping it will help the build speed <= this didn't work well, so it's reverted
 # see https://docs.travis-ci.com/user/migrating-from-legacy/ and https://docs.travis-ci.com/user/ci-environment
-sudo: true
+os: osx
+osx_image: xcode9.4
 
 language: java
-
-matrix:
-  include:
-  - jdk: oraclejdk8
-  - jdk: oraclejdk8
-    env: SKIP_RELEASE=true MOCK_MAKER=mock-maker-inline
-  - jdk: oraclejdk9
-    env: SKIP_RELEASE=true
-  - jdk: oraclejdk9
-    env: SKIP_RELEASE=true MOCK_MAKER=mock-maker-inline
-  - jdk: oraclejdk9
-    env: SKIP_RELEASE=true SIMULATE_JAVA11=true
-  - install: . ./install-jdk.sh -F 10 -L GPL
-    env: SKIP_RELEASE=true JDK='Oracle JDK 10'
-  - install: . ./install-jdk.sh -F 10 -L GPL
-    env: SKIP_RELEASE=true MOCK_MAKER=mock-maker-inline JDK='Oracle JDK 10'
-  - install: . ./install-jdk.sh -F 11 -L BCL
-    env: SKIP_RELEASE=true JDK='Oracle JDK 11'
-  - install: . ./install-jdk.sh -F 11 -L BCL
-    env: SKIP_RELEASE=true MOCK_MAKER=mock-maker-inline JDK='Oracle JDK 11'
-  allow_failures:
-    - env: SKIP_RELEASE=true JDK='Oracle JDK 11'
-    - env: SKIP_RELEASE=true MOCK_MAKER=mock-maker-inline JDK='Oracle JDK 11'
-
-branches:
-  #Don't build tags
-  except:
-  - /^v\d/
-
-before_install:
-  - wget https://raw.githubusercontent.com/sormuras/bach/master/install-jdk.sh
 
 #Below skips the installation step completely (https://docs.travis-ci.com/user/customizing-the-build/#Skipping-the-Installation-Step)
 #We need it because otherwise Travis CI injects an awkward './gradlew assemble' step into the CI workflow
@@ -59,4 +29,3 @@ script:
 after_success:
   #Generates coverage report:
   - ./gradlew --stacktrace coverageReport && cp build/reports/jacoco/mockitoCoverage/mockitoCoverage.xml jacoco.xml || echo "Code coverage failed"
-  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
